Date 0.5.5
- Working in the function to download and update the cty.dat from the web.

March-2010 0.5.4
- Small fix to initialize a variable before using it.(realTimeLog in klog.cpp)
- Fixed a bug that caused KLog to crash of no cty.dat file was found (bug #016917)(TNX KA6MAL)

February-2010  0.5.3
- Fixed a bug that caused modified QSO not being updated.
- Fixed a bug in the way the band & mode combobox managed the data.

February-2010 - 0.5.2
- Fixed a bug that causes a crash when connectiong to DXCluster. (bug #016653)
- Added a very basic Satellite support.
- Removed the Freq LCD and added two new editable widgets: Freq TX and Freq RX. (bug #016609)
- Added again the entity count of /M stations.

January-2010 - 0.5.1
- Fixed a bug with the display of the Date.

December-2009 - 0.5.0
- Migrated to Qt4.
- Updated translations: SV by SM4ABE, DE by DL5PD, ES by EA4TV.
- ZL2ACG joined the KLog team. Welcome and thank you Andrew!

April-2009 0.4.7
- New feature: Import cabrillo logs.
- Improved the ADIF compatibility up to ADIF 2.2.2.
- BUG fixed: Improved the confirmed QSO accounting.
- BUG fixed: RST format were not changed when another mode was selected if the CALL was empty. (TNX Alvaro, EA4RCT).
- BUG fixed: Calls like F0XXX/TU8 were not recognised if written as TU8/F0XXX.
- BUG fixed: TX_PWR is only saved when bigger than 0w :-)
- BUG fixed: Prefixes were not properly managed and some information, as the STATE from ADIF files were not always well imported.
- BUG fixed: Related with the ADIF saving CQ & ITU zones for QSO. It was not properly saved but can be recovered from the CALL.

20-dic-2008 0.4.6
- BUG fixed: Printing was not properly working due to library actualization.
- BUG fixed: Fields STX/SRX/STATION_CALLSIGN/CONTEST_ID were copied from one QSO to the following one.

23-nov-2008 0.4.5
- GUI fixed: Changed the order of the input fields tab switching.
- GUI fixed: Corrected the layout to fix the screen as ITU was not properly shown.